# sanic-plugin-toolkit

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  environment.yml  example.py  my_plugin.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
examples/: blueprint_example.py  contextualize_example.py  contextualize_sqalchemy_example.py  example.py  example_spf.ini  my_blueprint.py  my_plugin.py  single_file.py  spf_config_example.py  view_example.py  websocket_test.py
plugins/: contextualize.py  contextualize_example.py
sanic_plugin_toolkit/: __init__.py  config.py  context.py  plugin.py  realm.py
sanic_plugin_toolkit/plugins/: __init__.py  contextualize.py
spf/: __init__.py  config.py  context.py  framework.py  plugin.py
spf/plugins/: __init__.py  contextualize.py
tests/: conftest.py  test_context.py  test_contextualize_plugin.py  test_plugin_asgi.py  test_plugin_exception.py  test_plugin_log.py  test_plugin_middleware.py  test_plugin_pickle.py  test_plugin_registration.py  test_plugin_route.py  test_plugin_signal_handlers.py  test_plugin_static.py  test_plugin_urlfor.py  test_plugin_websocket.py  test_spf_singleton.py
